# MetaCanSNPerDatabases

./: .gitignore  README.md  pyproject.toml
MetaCanSNPerDatabases/: Columns.py  CommandLineParser.py  Commands.py  Databases.py  Exceptions.py  Functions.py  Globals.py  MetaCanSNPerDatabase.py  Tables.py  Test.py  Tree.py  __init__.py  __main__.py  core.py
MetaCanSNPerDatabases/_core/: Aggregates.py  Databases.py  Exceptions.py  Functions.py  Structures.py  This.py  Tree.py  Words.py  __init__.py
MetaCanSNPerDatabases/core/: Aggregate.py  Aggregates.py  Columns.py  Databases.py  Functions.py  Indexes.py  Query.py  SQL.py  Structures.py  Structures.pyi  Tables.py  Tables.pyi  Tree.py  Words.py  _Constants.py
MetaCanSNPerDatabases/modules/: Columns.py  Databases.py  Functions.py  Globals.py  Tables.py  Test.py  Tree.py  _Constants.py
SQLOOP/: Globals.py  MetaCanSNPerDatabase.py  __init__.py  core.py
SQLOOP/_core/: Aggregates.py  Databases.py  Downloader.py  Exceptions.py  Expressions.py  Functions.py  Schema.py  Structures.py  ThreadConnection.py  Tree.py  Types.py  Words.py
tests/: test_main.py
