[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "MetaCanSNPerDatabases"
readme = "README.md"
description = "MetaCanSNPerDatabases: A Package to create and interact with MetaCanSNPer databases."
version = "0.1"
requires-python = ">= 3.8"
license = { file = "LICENSE"}
keywords = ["Bioinformatics", "SNP-typing"]
authors = [
    {name = "Fredrik Sörensen", email = "fredrik.sorensen@foi.se"},
    {name = "David Sundell", email = "david.sundell@foi.se"}
]
maintainers = [
    {name = "Fredrik Sörensen", email = "fredrik.sorensen@foi.se"}
]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Anyone",
    "Topic :: Bioinformatics :: Variant Calling",

    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",

    "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
Repository = "https://github.com/XJ-04561/MetaCanSNPerDatabases.git"

[project.scripts]
MetaCanSNPerDatabases = "MetaCanSNPerDatabases.CommandLineParser:main"
