[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "SQLOOP"
readme = "README.md"
description = "SQLOOP: A Package to create and interact with SQLITE3 databases."
version = "0.2"
requires-python = ">= 3.8"
license = { file = "LICENSE"}
keywords = ["SQL", "SQLOOP"]
authors = [
    {name = "Fredrik Sörensen", email = "fredrik.sorensen@foi.se"}
]
maintainers = [
    {name = "Fredrik Sörensen", email = "fredrik.sorensen@foi.se"}
]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Topic :: SQL :: Development",

    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Operating System :: OS Independent"
]
dependencies = [
    "GeekyGadgets@git+https://github.com/XJ-04561/GeekyGadgets",
    "PseudoPathy@git+https://github.com/XJ-04561/PseudoPathy"
]

[project.urls]
Repository = "https://github.com/XJ-04561/SQLOOP.git"
